# ProgGraph

./: README.md  pyproject.toml
Lecture1/: float_compare.py  operations.py
Lecture4/: Abstract1.py  Adaptor.py  CommandPattern.py  Decorator.py  LazyInitTexture.py  MixinSimple.py  Monostate.py  MultipleMixins.py  Observer.py  SimpleFactory.py  SimpleObserver.py  Singleton.py  Strategy.py
Lecture5/: IntroductionToNumpy.py
